# FYP-ROS

./: README.md  Voice_Command_Navigation_Use_Case_Diagram.md  Voice_Command_Navigation_Use_Case_Diagram.puml  Voice_Command_Sequence_Diagram.puml  originbot_nav2.yaml
OrangePi/FallDetect2_ws/: FALL_DETECTION_SENSITIVITY_GUIDE.md  LAUNCH_WITH_SETTINGS.md  camera_tuning.py  cli_camera_tuner.py  fall_detection_presets.py  hf867_factory_settings_1752397439.txt  hf867_factory_settings_1752398210.txt  simple_camera_viewer.py
OrangePi/FallDetect2_ws/src/fall_detection_pkg/: BUILD_GUIDE.md  HF867_README.md  package.xml  setup.py
OrangePi/FallDetect2_ws/src/fall_detection_pkg/calibration_data/: README.md
OrangePi/FallDetect2_ws/src/fall_detection_pkg/config/: hf867_camera_config.yaml
OrangePi/FallDetect2_ws/src/fall_detection_pkg/fall_detection_pkg/: camera_node.py  fall_detection_node.py  image_preview_node.py  test_node.py
OrangePi/FallDetect2_ws/src/fall_detection_pkg/launch/: camera_launch.py  complete_system_launch.py  fall_detection_simple_launch.py  fall_detection_with_preview_launch.py  hf867_optimized_launch.py  hf867_system_launch_fixed.py
OrangePi/FallDetect2_ws/src/fall_detection_pkg/scripts/: camera_calibration.py  camera_exposure_test.py  download_model.py  hf867_calibration.py  preview_camera.py  test_fall_detection.py
OrangePi/combined_launch/: README.md  __init__.py  build_orangepi.sh  cleanup_preview.sh  close_preview_windows.py  package.xml  setup.py
RDK-X5/combined_launch/: README.md  __init__.py  build_combined.bat  build_combined.sh  package.xml  setup.py
RDK-X5/combined_launch/launch/: combined_nodes_launch.py
RDK-X5/combined_launch/resource/: combined_launch
ROS2_ESP32-S3_20250701/: ROS2_ESP32-S3_20250701.ino
bread-compact-wifi/: compact_wifi_board.cc  irgb_mqtt.cc
xiaozhi_mqtt/: ESP32_GPIO_PINOUT.md  ESP32_MQTT_ANALYSIS.md
(+159 files in other folders)
